Fix PWA install on iOS

--- a/app/src/assets/styles/views/data-view.scss
+++ b/app/src/assets/styles/views/data-view.scss
@@ -158,7 +158,6 @@
 }
 
 .badges-parent-container {
-  display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 
